This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.8.2
  Release Notes update (#1933950)
  Translation updates:
  - Italian (#1939235)
  - Polish (#1934655)

WinMerge 2.8.0 - 2008-04-03 (r5254)
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Updated the side art of the installer application (#1915012)
  Update URLs and switch to 2.8 manual (#1919965)
  New splash screen (#1914869)
  Create separate document for compiling WinMerge (#1927502)
  Update InnoSetup translations (#1931492)
  Manual and documentation updates
  BugFix: Installer could create a registry access error (#1909967)
  BugFix: The filter text box in Open-dialog sometimes displayed some garbage
    data (#1915424)
  BugFix: Print area was not clipped correctly. (#1915536)
  BugFix: Undo after pane swapping (#1915536, #1923625)
  BugFix: Quick compare for same folder didn't show differences (#1918599)
  BugFix: Installer didn't have ChangeLog.txt included (r5256)
  Translation updates:
  - Brazilian (#1913723)
  - Chinese Traditional (#1927605)
  - French (#1920380)
  - German (#1918139)
  - Japanese (r5153)
  - Russian (#1914466)
  - Spanish (#1907152, r5252)
  - Swedish (#1908289)

WinMerge 2.8 RC - 2008-03-04 (r5125)
  Update developers list in splash screen (#1891548)
  Better error handling for Excel plugin (#1510293)
  Add macros, bookmarks and document properties to Word plugin (#1510298)
  Add *.dot (document template) extension to Word plugin (r5120)
  BugFix: Copy&Paste from VB6 added binary chars (#1904355)
  Translation updates:
  - Chinese Traditional (#1905323)
  - Swedish (#1905520)

WinMerge 2.7.7.6 - 2008-02-28 (r5099)
  Remove sintance.h/sintance.cpp as not compatible with GPL (#1886580)
  Automatically switch to mixed-EOL mode when loading files with
   two or more EOL styles (#1901547)